# Vee-Brew-POS

./: .gitignore  Design.md  PRODUCT.md  README.md  pubspec.yaml  scratch.md  test_script.dart  vee-brew-menu.md  vee_brew.sqlite  veebrew.sqlite
.impeccable/critique/: 2026-06-02T04-38-07Z__lib-screens-pos-screen-dart.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: fix-order-detail-view-errors.md
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
lib/: main.dart
lib/database/: drift_database.dart  drift_database.g.dart
lib/domain/: analytics_summary.dart
lib/models/: mock_data.dart  modifier.dart  order_item.dart  product.dart
lib/providers/: admin_provider.dart  analytics_provider.dart  analytics_provider.g.dart  analytics_state_provider.dart  cart_provider.dart  category_provider.dart  checkout_provider.dart  data_providers.dart  database_provider.dart  mock_analytics_provider.dart  mock_analytics_provider.g.dart
lib/screens/: admin_dashboard_screen.dart  pos_screen.dart
lib/services/: menu_sync_service.dart  printer_service.dart  receipt_generator.dart
lib/theme/: binance_theme.dart
lib/widgets/: category_sidebar.dart  checkout_modal.dart  modifier_bottom_sheet.dart  order_ticket.dart  product_grid.dart  product_search_bar.dart
test/: admin_test.dart  sync_db_test.dart  widget_test.dart
test/providers/: analytics_state_provider_test.dart  (+1 more)
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+76 files in other folders)
